--- a/Proyecto/Game.vcxproj
+++ b/Proyecto/Game.vcxproj
@@ -75,6 +75,9 @@
   <ItemGroup>
     <ClInclude Include="..\Source\Game.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Ejecutable\readme.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
