--- a/Proyecto/Game.vcxproj.filters
+++ b/Proyecto/Game.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Ejecutable\readme.txt">
+      <Filter>Archivos de recursos</Filter>
+    </None>
+  </ItemGroup>
 </Project>
