--- a/Proyecto/Game.vcxproj.filters
+++ b/Proyecto/Game.vcxproj.filters
@@ -38,19 +38,19 @@
     <ClInclude Include="..\Source\Config.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Sprite.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
     <ClInclude Include="..\Source\SpriteDef.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Nave.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="..\Source\Sprite.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Ejecutable\readme.txt">
+    <Text Include="..\Ejecutable\Readme.txt">
       <Filter>Archivos de recursos</Filter>
-    </None>
+    </Text>
   </ItemGroup>
 </Project>
